[project]
name = "comfyui_essentials"
description = "Essential nodes that are weirdly missing from ComfyUI core. With few exceptions they are new features and not commodities."
version = "1.1.0"
license = { file = "LICENSE" }
dependencies = ["numba", "colour-science", "rembg", "pixeloe"]

[project.urls]
Repository = "https://github.com/cubiq/ComfyUI_essentials"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "matteo"
DisplayName = "ComfyUI_essentials"
Icon = ""
